--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Kacper Mura",
   "license": "ISC",
   "dependencies": {
+    "dblapi.js": "^2.2.0",
     "discord.js": "^11.4.2",
     "riot-api-nodejs": "^2.1.0",
     "superagent": "^3.8.3"
